[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplegraph"
version = "0.1.0"
description = "A simple Python project for the Simple class"
authors = [
    { name = "Your Name", email = "your_email@example.com" }
]
dependencies = [
    "langgraph",
    "marvin"
]

[project.license]
text = "None"
